One more commit

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,2 +1,11 @@
-.selected
-  background-color: red
+@import './variables/colors'
+
+@import 'bootstrap/scss/bootstrap-reboot.scss'
+@import './libs/loaders'
+
+@import './components/greating'
+@import './components/quiz'
+
+body
+  background-color: $bg-color
+
